installer tweaks. fix mkdir missing -p

--- a/yarn-project/aztec.js/package.json
+++ b/yarn-project/aztec.js/package.json
@@ -24,7 +24,7 @@
   },
   "scripts": {
     "build": "yarn clean && yarn build:copy-contracts && tsc -b && webpack",
-    "build:copy-contracts": "mkdir ./src/account_contract/artifacts && cp ../noir-contracts/src/SchnorrAccount.json ../noir-contracts/src/EcdsaAccount.json ../noir-contracts/src/SchnorrSingleKeyAccount.json ./src/account_contract/artifacts",
+    "build:copy-contracts": "mkdir -p ./src/account_contract/artifacts && cp ../noir-contracts/src/SchnorrAccount.json ../noir-contracts/src/EcdsaAccount.json ../noir-contracts/src/SchnorrSingleKeyAccount.json ./src/account_contract/artifacts",
     "build:web": "webpack",
     "build:dev": "tsc -b --watch",
     "build:ts": "tsc -b",
