--- a/tooling/debugger/Cargo.toml
+++ b/tooling/debugger/Cargo.toml
@@ -6,7 +6,9 @@ authors.workspace = true
 edition.workspace = true
 license.workspace = true
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[build-dependencies]
+rustc_version = "0.4.0"
+build-data.workspace = true
 
 [dependencies]
 acvm.workspace = true
@@ -22,5 +24,8 @@ easy-repl = "0.2.1"
 owo-colors = "3"
 serde_json.workspace = true
 
-[dev_dependencies]
+[dev-dependencies]
+assert_cmd = "2.0.12"
+rexpect = "0.5.0"
+test-binary = "3.0.1"
 tempfile.workspace = true
