feat: barretenberg doxygen CI (#3818)
First pass on doxygen CI. This is now uploading files to S3 based on
running doxygen on the barretenberg codebase.

- It's mostly a listing of everything's signature + source, and a few
pieces of documentation. We can figure out a documentation plan from
here
- This needs to actually be pointed somewhere to be
[slash]meaningful[/slash] convenient right now, but lives here
https://aztec-ci-artifacts.s3.us-east-2.amazonaws.com/barretenberg-doxygen/3f0fad0de81d472cf71c03df11cf01ed6e7e09e0/index.html

---------

Co-authored-by: ludamad <adam@aztecprotocol.com>
Co-authored-by: Maddiaa <47148561+Maddiaa0@users.noreply.github.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -192,6 +192,21 @@ jobs:
           name: "Build"
           command: cond_spot_run_build barretenberg-x86_64-linux-clang-sol 32
 
+  barretenberg-docs:
+    machine:
+      image: ubuntu-2204:2023.07.2
+    resource_class: large
+    steps:
+      - *checkout
+      - *setup_env
+      - run:
+          name: "Build barretenberg docs"
+          command: build barretenberg-docs
+      - run:
+          name: "Deploy barretenberg docs"
+          command: |
+            barretenberg/cpp/docs/deploy_doxygen.sh
+
   barretenberg-stdlib-tests:
     docker:
       - image: aztecprotocol/alpine-build-image
@@ -1091,6 +1106,7 @@ workflows:
             - barretenberg-x86_64-linux-clang-assert
             - noir-compile-acir-tests
           <<: *defaults
+      - barretenberg-docs: *defaults
       - bb-js:
           requires:
             - barretenberg-wasm-linux-clang
