chore: switch noir_codegen over to use `nargo export`

--- a/tooling/noir_codegen/package.json
+++ b/tooling/noir_codegen/package.json
@@ -36,7 +36,7 @@
     "dev": "tsc-multi --watch",
     "build": "tsc",
     "test": "yarn test:codegen && yarn test:node && yarn test:clean",
-    "test:codegen": "tsx src/main.ts ./test/assert_lt/target/** --out-dir ./test/codegen",
+    "test:codegen": "tsx src/main.ts ./test/assert_lt/export/** --out-dir ./test/codegen",
     "test:node": "mocha --timeout 25000 --exit --config ./.mocharc.json",
     "test:clean": "rm -rf ./test/codegen",
     "prettier": "prettier 'src/**/*.ts'",
