--- a/tooling/noir_codegen/package.json
+++ b/tooling/noir_codegen/package.json
@@ -36,9 +36,9 @@
     "dev": "tsc-multi --watch",
     "build": "tsc",
     "test": "yarn test:codegen && yarn test:node && yarn test:clean",
-    "test:codegen": "tsx src/main.ts ./test/assert_lt/export/** --out-dir ./test/codegen",
+    "test:codegen": "nargo export --program-dir=./test/assert_lt && tsx src/main.ts ./test/assert_lt/export/** --out-dir ./test/codegen",
     "test:node": "mocha --timeout 25000 --exit --config ./.mocharc.json",
-    "test:clean": "rm -rf ./test/codegen",
+    "test:clean": "rm -rf ./test/codegen ./test/assert_lt/export",
     "prettier": "prettier 'src/**/*.ts'",
     "prettier:fix": "prettier --write 'src/**/*.ts' 'test/**/*.ts'",
     "lint": "NODE_NO_WARNINGS=1 eslint . --ext .ts --ignore-path ./.eslintignore  --max-warnings 0",
