--- a/compiler/wasm/package.json
+++ b/compiler/wasm/package.json
@@ -29,8 +29,9 @@
   },
   "scripts": {
     "build": "webpack",
-    "test": "yarn test:build_fixtures && yarn test:node",
+    "test": "yarn test:build_fixtures && yarn test:node && yarn test:browser",
     "test:build_fixtures": "./build-fixtures.sh",
+    "test:browser": "web-test-runner",
     "test:node": "NODE_NO_WARNINGS=1 mocha --config ./.mocharc.json",
     "clean": "rm -rf ./build ./target ./dist public/fixtures/simple/target public/fixtures/with-deps/target",
     "nightly:version": "jq --arg new_version \"-$(git rev-parse --short HEAD)$1\" '.version = .version + $new_version' package.json > package-tmp.json && mv package-tmp.json package.json",
@@ -51,9 +52,10 @@
     "@types/sinon": "^17",
     "@wasm-tool/wasm-pack-plugin": "^1.7.0",
     "@web/dev-server-esbuild": "^0.3.6",
-    "@web/test-runner": "^0.15.3",
-    "@web/test-runner-playwright": "^0.10.0",
+    "@web/test-runner": "^0.18.0",
+    "@web/test-runner-playwright": "^0.11.0",
     "adm-zip": "^0.5.0",
+    "assert": "^2.1.0",
     "browserify-fs": "^1.0.0",
     "chai": "^4.3.10",
     "copy-webpack-plugin": "^11.0.0",
