--- a/compiler/wasm/tsconfig.json
+++ b/compiler/wasm/tsconfig.json
@@ -14,6 +14,9 @@
     "esModuleInterop": true,
     "target": "ESNext",
     "module": "CommonJS",
-    "moduleResolution": "Node"
+    "moduleResolution": "Node",
+    "paths": {
+      "@noir-lang/noir_wasm/*": ["./*"],
+    }
   }
 }
