chore: build protocol circuits on CI and stop committing artifacts (#3816)
This makes the process consistent with how the noir contracts and other
artifacts are built.

--- a/yarn-project/Dockerfile
+++ b/yarn-project/Dockerfile
@@ -15,7 +15,7 @@ RUN yarn workspace @aztec/noir-compiler build
 RUN yarn workspace @aztec/noir-contracts build:contracts
 # We need to build accounts as it needs to copy in account contracts from noir-contracts.
 RUN yarn workspace @aztec/accounts build:copy-contracts
-RUN yarn workspace @aztec/noir-protocol-circuits noir:build
+RUN yarn workspace @aztec/noir-protocol-circuits build
 RUN yarn tsc -b
 
 ENTRYPOINT ["yarn"]
