--- a/.github/workflows/test-js-packages.yml
+++ b/.github/workflows/test-js-packages.yml
@@ -76,14 +76,11 @@ jobs:
       - name: Build noir_wasm
         run: yarn workspace @noir-lang/noir_wasm build
 
-      - name: Dereference symlink
-        run: echo "UPLOAD_PATH=$(readlink -f ./compiler/wasm)" >> $GITHUB_ENV
-
       - name: Upload artifact
         uses: actions/upload-artifact@v3
         with:
           name: noir_wasm
-          path: ${{ env.UPLOAD_PATH }}
+          path: ./compiler/wasm
           retention-days: 3
 
   build-acvm-js:
