Revert "chore: remove now unused bb abstraction leaks"
This reverts commit 3c8f83e4f4f8ae8fa211ec46838bb5673a27c771.

--- a/tooling/nargo_cli/Cargo.toml
+++ b/tooling/nargo_cli/Cargo.toml
@@ -51,6 +51,7 @@ dap.workspace = true
 
 # Backends
 backend-interface = { path = "../backend_interface" }
+bb_abstraction_leaks.workspace = true
 
 # Logs
 tracing-subscriber.workspace = true
