feat: add str support for args + add name/symbol/decimal to token (#3862)
Fixes #2889 by adding support for str as input arg and adding a compressed string struct.

--- a/yarn-project/noir-contracts/contracts/token_contract/Nargo.toml
+++ b/yarn-project/noir-contracts/contracts/token_contract/Nargo.toml
@@ -7,5 +7,6 @@ type = "contract"
 [dependencies]
 aztec = { path = "../../../aztec-nr/aztec" }
 safe_math = { path = "../../../aztec-nr/safe-math" }
+compressed_string = {path = "../../../aztec-nr/compressed-string"}
 authwit = { path = "../../../aztec-nr/authwit" }
 protocol_types = { path = "../../../noir-protocol-circuits/src/crates/types" }
