--- a/compiler/noirc_errors/Cargo.toml
+++ b/compiler/noirc_errors/Cargo.toml
@@ -16,3 +16,6 @@ chumsky.workspace = true
 serde.workspace = true
 serde_with = "3.2.0"
 tracing.workspace = true
+flate2.workspace = true
+serde_json.workspace = true
+base64.workspace = true
