--- a/compiler/wasm/package.json
+++ b/compiler/wasm/package.json
@@ -48,6 +48,7 @@
     "@types/mocha": "^10.0.6",
     "@types/mocha-each": "^2",
     "@types/node": "^20.10.5",
+    "@types/pako": "^2",
     "@types/path-browserify": "^1",
     "@types/readable-stream": "^4",
     "@types/sinon": "^17",
@@ -75,5 +76,8 @@
     "url": "^0.11.3",
     "webpack": "^5.49.0",
     "webpack-cli": "^4.7.2"
+  },
+  "dependencies": {
+    "pako": "^2.1.0"
   }
 }
