removed @ts-ignore, proper typings

--- a/compiler/wasm/tsconfig.json
+++ b/compiler/wasm/tsconfig.json
@@ -15,5 +15,9 @@
     "target": "ESNext",
     "module": "CommonJS",
     "moduleResolution": "Node",
+    "allowJs": true,
+    "paths": {
+      "*": ["./dist/types/*"]
+    }
   }
 }
