refactor: standardise toml parsers (#3910)

--- a/yarn-project/noir-compiler/package.json
+++ b/yarn-project/noir-compiler/package.json
@@ -47,7 +47,7 @@
   "dependencies": {
     "@aztec/circuits.js": "workspace:^",
     "@aztec/foundation": "workspace:^",
-    "@ltd/j-toml": "^1.38.0",
+    "@iarna/toml": "^2.2.5",
     "@noir-lang/noir_wasm": "portal:../../noir/packages/noir_wasm",
     "base64-js": "^1.5.1",
     "commander": "^9.0.0",
