--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -758,6 +758,17 @@ jobs:
           name: "Test"
           command: cond_spot_run_compose end-to-end 4 ./scripts/docker-compose.yml TEST=e2e_cli.test.ts
 
+  e2e-persistence:
+    docker:
+      - image: aztecprotocol/alpine-build-image
+    resource_class: small
+    steps:
+      - *checkout
+      - *setup_env
+      - run:
+          name: "Test"
+          command: cond_spot_run_compose end-to-end 4 ./scripts/docker-compose-no-sandbox.yml TEST=e2e_persistence.test.ts
+
   e2e-p2p:
     docker:
       - image: aztecprotocol/alpine-build-image
@@ -1205,6 +1216,7 @@ workflows:
       - uniswap-trade-on-l1-from-l2: *e2e_test
       - integration-l1-publisher: *e2e_test
       - integration-archiver-l1-to-l2: *e2e_test
+      - e2e-persistence: *e2e_test
       - e2e-p2p: *e2e_test
       - e2e-browser: *e2e_test
       - e2e-card-game: *e2e_test
@@ -1241,6 +1253,7 @@ workflows:
             - uniswap-trade-on-l1-from-l2
             - integration-l1-publisher
             - integration-archiver-l1-to-l2
+            - e2e-persistence
             - e2e-p2p
             - e2e-browser
             - e2e-card-game
