chore: deploy canary release of bb.js to npm via CCI (#3917)
This PR releases bb.js npm via CCI under the `canary` tag, while
maintaining the release via Github Actions under the `latest` tag. They
should be identical. Once we are confident in the release via CCI, we
can deploy both `canary` and `latest` from CCI in a followup PR.

Also add check_env script during setup_env to ensure the version of bash
is high enough.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -998,6 +998,11 @@ jobs:
             deploy_dockerhub aztec-faucet
             deploy_dockerhub mainnet-fork
       - run:
+          name: "Release canary to NPM: bb.js"
+          command: |
+            should_release || exit 0
+            deploy_npm bb.js canary
+      - run:
           name: "Release canary to NPM: yarn-project"
           command: |
             should_release || exit 0
