feat: Benchmark protogalaxy prover (#3958)
Benchmark Protogalaxy prover. This just benchmarks the current folding
function. Future PRs will make update and augment with values that will
better reflect performance in production.

Results: uses 16 cores (for the x86 build). `fold_one/N` measures the
time to call the `fold_instances` function to fold a single instance
into an accumulator where the instance sizes are $2^N$. Note this is for
the Ultra arithmetization (so no Goblin, Poseidon2 or DataBus
relations).

```
% taskset -c 0-15 ./bin/protogalaxy_bench                   38s ~/barretenberg-cpp/build cg/pg-bench mainframe
2024-01-11T19:39:49+00:00
Running ./bin/protogalaxy_bench
Run on (128 X 2649.99 MHz CPU s)
CPU Caches:
  L1 Data 32 KiB (x64)
  L1 Instruction 32 KiB (x64)
  L2 Unified 512 KiB (x64)
  L3 Unified 32768 KiB (x8)
Load Average: 3.48, 8.51, 27.24
------------------------------------------------------
Benchmark            Time             CPU   Iterations
------------------------------------------------------
fold_one/14        417 ms          259 ms            3
fold_one/15        668 ms          409 ms            2
fold_one/16       1158 ms          696 ms            1
fold_one/17       2245 ms         1433 ms            1
fold_one/18       4168 ms         2644 ms            1
fold_one/19       7890 ms         5119 ms            1
fold_one/20      15809 ms        10633 ms            1
```

Closes https://github.com/AztecProtocol/barretenberg/issues/692

--- a/barretenberg/cpp/src/barretenberg/benchmark/CMakeLists.txt
+++ b/barretenberg/cpp/src/barretenberg/benchmark/CMakeLists.txt
@@ -6,3 +6,4 @@ add_subdirectory(ultra_bench)
 add_subdirectory(goblin_bench)
 add_subdirectory(relations_bench)
 add_subdirectory(widgets_bench)
+add_subdirectory(protogalaxy_bench)
