--- a/.github/workflows/test-js-packages.yml
+++ b/.github/workflows/test-js-packages.yml
@@ -9,7 +9,7 @@ on:
 
 # This will cancel previous runs when a branch or PR is updated
 concurrency:
-  group: ${{ github.workflow }}-${{ github.head_ref || github.ref || gitdisthub.run_id }}
+  group: ${{ github.workflow }}-${{ github.head_ref || github.ref || github.run_id }}
   cancel-in-progress: true
 
 jobs:
