chore: dumb fix to tests

--- a/.github/workflows/test-js-packages.yml
+++ b/.github/workflows/test-js-packages.yml
@@ -80,7 +80,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: noir_wasm
-          path: ./compiler/wasm/dist
+          path: ./compiler/wasm/{dist,build}
           retention-days: 3
 
   build-acvm-js:
@@ -294,7 +294,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: noir_wasm
-          path: ./compiler/wasm/dist
+          path: ./compiler/wasm/{dist,build}
 
       - name: Install Yarn dependencies
         uses: ./.github/actions/setup
@@ -398,7 +398,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: noir_wasm
-          path: ./compiler/wasm/dist
+          path: ./compiler/wasm/{dist,build}
 
       - name: Download noirc_abi package artifact
         uses: actions/download-artifact@v3
