--- a/yarn-project/cli/package.json
+++ b/yarn-project/cli/package.json
@@ -42,6 +42,7 @@
     "@aztec/l1-artifacts": "workspace:^",
     "@aztec/noir-compiler": "workspace:^",
     "@aztec/noir-contracts": "workspace:^",
+    "@aztec/types": "workspace:^",
     "@iarna/toml": "^2.2.5",
     "@libp2p/peer-id-factory": "^3.0.4",
     "commander": "^9.0.0",
