--- a/yarn-project/pxe/tsconfig.json
+++ b/yarn-project/pxe/tsconfig.json
@@ -32,6 +32,9 @@
     },
     {
       "path": "../noir-protocol-circuits"
+    },
+    {
+      "path": "../types"
     }
   ],
   "include": ["src"]
