--- a/yarn-project/types/tsconfig.json
+++ b/yarn-project/types/tsconfig.json
@@ -5,19 +5,10 @@
     "rootDir": "src",
     "tsBuildInfoFile": ".tsbuildinfo"
   },
+  "include": ["src"],
   "references": [
     {
-      "path": "../circuits.js"
-    },
-    {
       "path": "../ethereum"
-    },
-    {
-      "path": "../foundation"
-    },
-    {
-      "path": "../types"
     }
-  ],
-  "include": ["src"]
+  ]
 }
