--- a/yarn-project/accounts/tsconfig.json
+++ b/yarn-project/accounts/tsconfig.json
@@ -20,6 +20,9 @@
     },
     {
       "path": "../foundation"
+    },
+    {
+      "path": "../types"
     }
   ],
   "include": ["src", "src/**/*.json"]
