--- a/yarn-project/aztec.js/tsconfig.json
+++ b/yarn-project/aztec.js/tsconfig.json
@@ -17,6 +17,9 @@
     },
     {
       "path": "../foundation"
+    },
+    {
+      "path": "../types"
     }
   ],
   "include": ["src", "src/**/*.json"]
