--- a/yarn-project/pxe/package.json
+++ b/yarn-project/pxe/package.json
@@ -42,6 +42,7 @@
     "@aztec/kv-store": "workspace:^",
     "@aztec/noir-compiler": "workspace:^",
     "@aztec/noir-protocol-circuits": "workspace:^",
+    "@aztec/types": "workspace:^",
     "koa": "^2.14.2",
     "koa-router": "^12.0.0",
     "lodash.omit": "^4.5.0",
