--- a/yarn-project/types/package.json
+++ b/yarn-project/types/package.json
@@ -1,21 +1,12 @@
 {
-  "name": "@aztec/circuit-types",
+  "name": "@aztec/types",
   "version": "0.1.0",
+  "packageManager": "yarn@3.4.1",
   "type": "module",
+  "main": "./dest/index.js",
+  "types": "./dest/index.d.ts",
   "exports": {
-    ".": "./dest/index.js",
-    "./stats": "./dest/stats/index.js",
-    "./jest": "./dest/jest/index.js",
-    "./interfaces": "./dest/interfaces/index.js",
-    "./log_id": "./dest/logs/log_id.js",
-    "./tx_hash": "./dest/tx/tx_hash.js"
-  },
-  "typedocOptions": {
-    "entryPoints": [
-      "./src/index.ts"
-    ],
-    "name": "Aztec 3 Circuit Types",
-    "tsconfig": "./tsconfig.json"
+    "./interfaces": "./dest/interfaces/index.js"
   },
   "scripts": {
     "build": "yarn clean && tsc -b",
@@ -23,6 +14,7 @@
     "clean": "rm -rf ./dest .tsbuildinfo",
     "formatting": "run -T prettier --check ./src && run -T eslint ./src",
     "formatting:fix": "run -T eslint --fix ./src && run -T prettier -w ./src",
+    "test:light": "NODE_NO_WARNINGS=1 node --experimental-vm-modules $(yarn bin jest) --passWithNoTests",
     "test": "NODE_NO_WARNINGS=1 node --experimental-vm-modules $(yarn bin jest) --passWithNoTests"
   },
   "inherits": [
@@ -37,25 +29,25 @@
     "rootDir": "./src"
   },
   "dependencies": {
-    "@aztec/circuits.js": "workspace:^",
-    "@aztec/ethereum": "workspace:^",
-    "@aztec/foundation": "workspace:^",
-    "@aztec/types": "workspace:^",
-    "browserify-cipher": "^1.0.1",
-    "lodash.clonedeep": "^4.5.0",
-    "lodash.isequal": "^4.5.0",
-    "lodash.times": "^4.3.2",
-    "tslib": "^2.5.0"
+    "@aztec/ethereum": "workspace:^"
   },
   "devDependencies": {
     "@jest/globals": "^29.5.0",
+    "@types/debug": "^4.1.7",
+    "@types/detect-node": "^2.0.0",
     "@types/jest": "^29.5.0",
-    "@types/lodash.clonedeep": "^4.5.7",
-    "@types/lodash.isequal": "^4.5.6",
-    "@types/lodash.times": "^4.3.7",
-    "@types/node": "^18.7.23",
+    "@types/supertest": "^2.0.12",
+    "@typescript-eslint/eslint-plugin": "^6.2.1",
+    "@typescript-eslint/parser": "^6.2.1",
+    "comlink": "^4.4.1",
+    "eslint": "^8.21.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-jsdoc": "^40.1.0",
+    "eslint-plugin-no-only-tests": "^3.1.0",
+    "eslint-plugin-tsdoc": "^0.2.17",
     "jest": "^29.5.0",
-    "jest-mock-extended": "^3.0.3",
+    "prettier": "^2.7.1",
+    "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
@@ -65,7 +57,6 @@
     "src",
     "!*.test.*"
   ],
-  "types": "./dest/index.d.ts",
   "engines": {
     "node": ">=18"
   }
